feat: add header

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+  <title>VShklyaev CV</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 </head>
+
 <body>
-   <h1>Vladimir</h1>
-   <h2>Vladimir</h2>
-   <h3>Vladimir</h3>
-   <h4>Vladimir</h4>
-   <header class="header">Vladimir</header>
-</body>
-</html>
+
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Vladimir Shklyaev</h1>
+  <p>JS/FE Pre-School 2022Q4 Student</p> 
+</div>
