feat: add new information

--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>VShklyaev CV</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VShklyaev_CV</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>Vladimir Shklyaev</h1>
-  <p>JS/FE Pre-School 2022Q4 Student</p> 
-</div>
+    <div class="container">
+      <div class="header">
+        <div class="title">
+          <h1>Vladimir Shklyaev</h1>
+          <p3>JS/FE Pre-School Q42022 Student</p3>
+        </div>  
+        <div class="my_photo"><img src="./img/Vladimir.jpg"></div>
+      </div>
+      <div class="nav">
+        <ul>
+          <li><a href="#">Contacts</a></li>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Code</a></li>
+          <li><a href="#">Courses</a></li>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">Languages</a></li>
+        </ul>
+      </div>
+      <div class="content-wrapper">
+        <div class="main">
+          <h3>Contacts</h3>
+          <li class="text">Mobile: +375298589264</li>
+          <li class="text">Email:<a class="link" href="#">Subtitlez2106@gmail.com</a></li>
+          <li class="text">Discord:<a class="link" href="#">VladimirS(@Vladimir210688</a></li>
+          <h3>Profile</h3>
+          <p class="text">Started learning a new profession JS/FE Pre-School 2022Q4. Now in the early stages.I chose this course because I want to develop and further connect my professional activity with programming. I am a goal-oriented person, I am used to bringing everything to the final. Programming languages, frameworks, methodologies, version control systems and development tools under study</p>
+          <h3>Skills</h3>
+          <li class="text">Github</li>
+          <li class="text">Wordpress</li>
+        </div>
+        <div class="sidebar">
+          <h3>Code</h3>
+          <pre class="text pre">No sample code yet</pre>
+          <h3>Courses</h3>
+          <li class="text">JS/FE Pre-School Q42022 Student</li>
+          <h3>Education</h3>
+          <p class="text">Higher economic education: REU Plekhanov</p>
+          <h3>Languages</h3>
+          <li class="text">Russian - Native</li>
+          <li class="text">English - A 1</li>
+        </div>
+      </div>  
+    </div>
+    <div class="footer"></div>        
+</body>
+</html>
