--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       </div>
       <div class="nav">
         <ul>
-          <li><a href="#">Contacts</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Code</a></li>
-          <li><a href="#">Courses</a></li>
-          <li><a href="#">Education</a></li>
-          <li><a href="#">Languages</a></li>
+          <li><a href="#Contacts">Contacts</a></li>
+          <li><a href="#Profile">Profile</a></li>
+          <li><a href="#Skills">Skills</a></li>
+          <li><a href="#Code">Code</a></li>
+          <li><a href="#Courses">Courses</a></li>
+          <li><a href="#Education">Education</a></li>
+          <li><a href="#Languages">Languages</a></li>
         </ul>
       </div>
       <div class="content-wrapper">
@@ -50,8 +50,11 @@
           <li class="text">Russian - Native</li>
           <li class="text">English - A 1</li>
         </div>
-      </div>  
-    </div>
-    <div class="footer"></div>        
+      </div>
+      <div class="footer">
+        <h3>Footer</h3>
+      </div>
+    </div>   
+    </div>       
 </body>
 </html>
