feat: add footer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
         </div>
       </div>
       <div class="footer">
-        <h3>Footer</h3>
+        <div id="github">
+          <a href="https://github.com/Vladimir210688" title="githubpage" target="_blank">
+            <img src="/img/githublogo.png" alt="ghp" title="GIT">
+          </a>
+        </div>
+        <div id="rsschool">
+          <a href="https://rs.school/js/" title="rsschoolpage" target="_blank">
+            <img src="/img/rsslogo.png" alt="rsschool" title="RSS">
+          </a>
+        </div>
+        <div class="year">
+          <img src="/img/2022logo.png" alt="year" title="2022">
+        </div>
       </div>
     </div>   
     </div>       
