feat: fixed link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </a>
         </div>
         <div class="year">
-          <img src="/img/2022logo.png" alt="year" title="2022">
+          <img src="/img/2022logo.png" alt="2022" title="2022">
         </div>
       </div>
     </div>   
