--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
       </div>
       <div class="content-wrapper">
         <div class="main">
-          <h3>Contacts</h3>
+          <h3 id="Contacts">Contacts</h3>
           <li class="text">Mobile: +375298589264</li>
           <li class="text">Email:<a class="link" href="#">Subtitlez2106@gmail.com</a></li>
           <li class="text">Discord:<a class="link" href="#">VladimirS(@Vladimir210688</a></li>
-          <h2>Profile</h2>
+          <h2 id="Profile">Profile</h2>
           <p class="text">Started learning a new profession JS/FE Pre-School 2022Q4. Now in the early stages.I chose this course because I want to develop and further connect my professional activity with programming. I am a goal-oriented person, I am used to bringing everything to the final. Programming languages, frameworks, methodologies, version control systems and development tools under study</p>
-          <h3>Skills</h3>
+          <h2 id="Skills">Skills</h2>
           <li class="text">Github</li>
           <li class="text">Wordpress</li>
         </div>
         <div class="sidebar">
-          <h2>Code</h2>
+          <h2 id="Code">Code</h2>
           <pre class="text pre">No sample code yet</pre>
-          <h2>Courses</h2>
+          <h2 id="Courses">Courses</h2>
           <li class="text">JS/FE Pre-School Q42022 Student</li>
-          <h2>Education</h2>
+          <h2 id="Education">Education</h2>
           <p class="text">Higher economic education: REU Plekhanov</p>
-          <h2>Languages</h2>
+          <h2 id="Languages">Languages</h2>
           <li class="text">Russian - Native</li>
           <li class="text">English - A 1</li>
         </div>
